refactoring the javascript code

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 SECRET_KEY=django-insecure-s%i+%lzc0lu)g27*s2tlkc(jony6-ti2+cu5_bi=v1^r)-5pgt"
 DEBUG=False
-ENGINE=django.db.backends.postgresql_psycopg2
+ENGINE=django.contrib.gis.db.backends.postgis
 DB_NAME=postgres
 DB_USER=postgres
 DB_PASSWORD=postgres
