--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
+asgiref==3.4.1
 Django==4.0
+django-filter==21.1
 djangorestframework==3.13.1
+djangorestframework-gis==0.17
 psycopg2==2.9.3
 python-decouple==3.5
+pytz==2021.3
+sqlparse==0.4.2
